--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,5 @@
-# ------mysql------
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/learn_spring_boot?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+# ------选择合适的配置文件激活------
+spring.profiles.active=dev
 
-# ------tomcat------
-#端口号
-server.port=6060
-#最大连接数
-server.tomcat.max-connections=200
-#编码方式
-server.tomcat.uri-encoding=UTF-8
-#在访问路径中添加项目名
-server.servlet.context-path=/learn_spring_boot
+# ------公用属性------
+amazon.amazonId = renqiang
