--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,3 +17,8 @@ spring.thymeleaf.cache=false
 #logging.file.name=./log/my.log
 logging.level.root=INFO
 logging.level.root.org.springframework.security=DEBUG
+
+# ------actuator ------
+#开放全部
+#访问举例：http://localhost:6060/learn_spring_boot/actuator/beans
+management.endpoints.web.exposure.include=*
