--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,8 +5,10 @@ spring.datasource.username=root
 spring.datasource.password=060012
 
 # ------tomcat------
+# ------此文件中只对内嵌tomcat负责，部署时的具体信息需要以部署环境中的tomcat为准------
+# ------部署后访问实例地址：http://localhost:8888/learn_spring_boot/readingList/ren------
 #http端口号
-#server.port=6060
+#server.port=6666
 #最大连接数
 server.tomcat.max-connections=200
 #编码方式
