--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ------选择合适的配置文件激活------
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # ------公用属性------
 amazon.amazonId = renqiang
